# ETL-Process-for-PyData-Attendee-Data-Migration

./: README.md  environment.yml  merge_lists.py  pyproject.toml
