[project]
name = "ETL-Process-for-PyData-Attendee-Data-Migration"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andrés Buelvas", email = "andrew.bavuels@gmail.com"},
]
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "unidecode>=1.3.8",
]
requires-python = ">=3.13"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "notebook>=7.3.2",
    "ruff>=0.9.6",
]

[tool.pixi.project]
name = "repo"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.13.2,<3.14"
